Added basic input for match logging