@@ -6,6 +6,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
 import java.util.Arrays;
@@ -29,14 +30,18 @@ public class MatchLogController {
                 new User("Player 4")
         );
 
-        List<String> comments = Arrays.asList("");
-
-        model.addAttribute(
-                "logmatch",
-                new Match(Match.Format.COMMANDER, players)
-        );
+        model.addAttribute("players", players);
+        model.addAttribute("formats", List.of(Match.Format.values()));
+        model.addAttribute("logmatch", new Match(players));
 
         return "logmatch";
+    }
+
+    @PostMapping
+    public String processLogMatch(Match match) {
+        log.info("Processing match " + match.getId() + "...");
+
+        return "redirect:/matches/current";
     }
 
 }
